--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@
 }
 input[type=search]{
     border: 0;
-    border: 1px solid rgb(237, 235, 235);
+    border: 2px solid rgb(189, 189, 189);
     height: 40px;
     padding-left: 10px;
     outline: 0;
-    border-radius: 10px;
+    border-radius: 5px;
   }
   div#is-relative{
     position: relative;
@@ -54,10 +54,11 @@ input[type=search]{
     margin-bottom: 30px;
   }
   #cards{
-    padding: 60px 20px 0px 20px;
+    padding: 60px 20px 20px 20px;
     height: auto;
     display: flex;
     align-items: center;
+    background-color: #FAFBFD;
   }
   .fondo-principal{
     background: rgb(0,113,128);
@@ -91,7 +92,7 @@ input[type=search]{
 
   #txt-description{
     font-size: 22px;
-    font-weight: 200;
+    font-weight: 300;
     color: white;
     margin-top: 20px;
     margin-bottom: 40px;
@@ -122,10 +123,18 @@ input[type=search]{
         }
         
         .card-text{
-            text-align: start !important;
+            text-align: end !important;
         }
+         
+        .card-text-r{
+          text-align: end !important;
+      }
         .card:hover{
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                }
+
+                .text-card-2{
+                  text-align: left;
                 }
 
 
@@ -137,6 +146,7 @@ input[type=search]{
         color: #22295A;
         font-size: 34px;
         text-align: center;
+        margin-top: 40px;
     }
     .description{
         color: #424242;
@@ -176,7 +186,7 @@ input[type=search]{
         text-align: left;
         height: auto;
         padding: 20px 20px 20px 20px;
-        background-color: #ededed;
+        background-color: #FAFBFD;
         
         
     }
@@ -230,4 +240,103 @@ input[type=search]{
     }
     .footer-p{
       padding: 50px;
+    }
+
+    .scroll-down {
+
+      height: 50px;
+    
+      width: 30px;
+    
+      border: 2px solid rgb(255, 255, 255);
+    
+      position: absolute;
+    
+      left: 50%;
+    
+      bottom: 20px;
+    
+      border-radius: 50px;
+    
+      cursor: pointer;
+    
+    }
+    
+    .scroll-down::before,
+    
+    .scroll-down::after {
+    
+      content: "";
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      height: 10px;
+      width: 10px;
+      transform: translate(-50%, -100%) rotate(45deg);
+      border: 2px solid rgb(255, 255, 255);
+      border-top: transparent;
+      border-left: transparent;
+      animation: scroll-down 1s ease-in-out infinite;
+    }
+    .scroll-down::before {
+
+      top: 30%;
+    
+      animation-delay: 0.3s;
+    
+      /* animation: scroll-down 1s ease-in-out infinite; */
+    
+    }
+    
+    
+    
+    @keyframes scroll-down {
+      0% {
+        /* top:20%; */
+        opacity: 0;
+      }
+      30% {
+        opacity: 1;
+      }
+      60% {
+        opacity: 1;
+      }
+      100% {
+        top: 90%;
+        opacity: 0;
+      }
+    }
+
+    .nav-link{
+      font-weight: 400;
+    }
+
+
+    .img-btn{
+    
+    }
+
+    .card-title{
+      font-weight: 700;
+      color: #424242;
+    }
+
+    .txt-sub-talks{
+      margin-top: 20px;
+      font-size: 12px;
+      color: #818181;
+    }
+
+    .txt-stb{
+      text-decoration: underline;
+      color: #818181;
+    }
+
+    .txt-stb:hover{
+      text-decoration: underline;
+      color: #107280;
+    }
+
+    .arr-tsk{
+      margin-left: 10px;
     }
