--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ input[type=search]{
         font-size: 34px;
         text-align: center;
         margin-top: 40px;
+	font-weight: 600;
     }
     .description{
         color: #424242;
